infra/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruggine
spec:
  tls:
  - hosts:
    - codecraft.engineering
    secretName: prod-codecraft-engineering-tls
  rules:
  - host: codecraft.engineering
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ruggine-service
      - path: /url
        pathType: Prefix
        backend:
          service:
            name: ruggine-service
